--- a/index.html
+++ b/index.html
@@ -28,6 +28,65 @@
             </div>
         </div>
     </header>
+    <!-- start price list -->
+    <div class="pricing-table">
+            <div class="pricing-card">
+                <h3 class="pricing-card-header">2 Hari 1 Malam (2D1N)</h3>
+                <div class="price"><sup>Rp.</sup>550.000 <span>/Tour</span></div>
+                <ul>
+                    <li><span class="fas fa-check"></span> Tiket Kapal Feri Siginjai PP</li>
+                    <li><span class="fas fa-check"></span> Mobil Check In/Out</li>
+                    <li><span class="fas fa-check"></span> Penginapan Homestay Fan</li>
+                    <li><span class="fas fa-check"></span> Makan Sesuai Program</li>
+                    <li><span class="fas fa-check"></span> Half Day Trip Laut</li>
+                    <li><span class="fas fa-check"></span> Free Snorkeling Tour + Alat</li>
+                    <li><span class="fas fa-check"></span> Free Dokumentasi Underwater</li>
+                    <li><span class="fas fa-check"></span> Free Guide Saat Tour</li>
+                    <li><span class="fas fa-check"></span> Free Tour Leader</li>
+                    <li><span class="fas fa-check"></span> Free Tiket Objek Wisata</li>
+                </ul>
+                <a href="#" class="order-btn">Pesan Sekarang</a>
+            </div>
+
+            <div class="pricing-card">
+                <h3 class="pricing-card-header">3 HARI 2 MALAM (3D2N)</h3>
+                <div class="price"><sup>Rp.</sup>750.000 <span>/Tour</span></div>
+                <ul>
+                    <li><span class="fas fa-check"></span> Tiket Kapal Feri Siginjai PP</li>
+                    <li><span class="fas fa-check"></span> Mobil Check In/Out</li>
+                    <li><span class="fas fa-check"></span> Penginapan Homestay Fan</li>
+                    <li><span class="fas fa-check"></span> Makan Sesuai Program</li>
+                    <li><span class="fas fa-check"></span> Free Tour Darat Day 1</li>
+                    <li><span class="fas fa-check"></span> Free Snorkeling Tour + Alat Day 2</li>
+                    <li><span class="fas fa-check"></span> Free Dokumentasi Underwater</li>
+                    <li><span class="fas fa-check"></span> Free Guide Saat Tour</li>
+                    <li><span class="fas fa-check"></span> Free Tour Leader</li>
+                    <li><span class="fas fa-check"></span> Free Tiket Objek Wisata</li>
+                    
+                </ul>
+                <a href="#" class="order-btn">Pesan Sekarang</a>
+            </div>
+
+            <div class="pricing-card">
+                <h3 class="pricing-card-header">4 HARI 3 MALAM (4D3N)</h3>
+                <div class="price"><sup>Rp.</sup>950.000 <span>/Tour</span></div>
+                <ul>
+                    <li><span class="fas fa-check"></span> Tiket Kapal Feri Siginjai PP</li>
+                    <li><span class="fas fa-check"></span> Mobil Check In/Out</li>
+                    <li><span class="fas fa-check"></span> Penginapan Homestay Fan</li>
+                    <li><span class="fas fa-check"></span> Makan Sesuai Program</li>
+                    <li><span class="fas fa-check"></span> Free Tour Darat Day 2</li>
+                    <li><span class="fas fa-check"></span> Free One Day Trip Laut Day 3</li>
+                    <li><span class="fas fa-check"></span> Free Dokumentasi Underwater</li>
+                    <li><span class="fas fa-check"></span> Free Guide Saat Tour</li>
+                    <li><span class="fas fa-check"></span> Free Tour Leader</li>
+                    <li><span class="fas fa-check"></span> Free Tiket Objek Wisata</li>
+                </ul>
+                <a href="#" class="order-btn">Pesan Sekarang</a>
+            </div>
+        <!-- end price list -->
+        
+  
  <!-- start code wrapper 3 -->   
     <div id="wrapper3" align="center">
 <h1>
