--- a/index.html
+++ b/index.html
@@ -147,5 +147,68 @@
 <a href="https://api.whatsapp.com/send?phone=6281994889229&text=Hi,%20Progate%20Tour%20	%26 %20Travel"><button class="button-hubungi-kami"><img src="http://xpdc.co.id/assets/images/wa.png" style="vertical-align: top;" width="16px"> Hubungi Kami</button></a>
 </div>
  <!-- end code wrapper 3 -->      
+ 
+ <!-- start footer -->
+        <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>Bantuan</h4>
+            <ul>
+              <li><a href="#">Tentang Kami</a></li>
+              <li><a href="#">Hubungi Kami</a></li>
+              <li><a href="#">Cara Pemesanan</a></li>
+              <li><a href="#">Kebijakan Privasi</a></li>
+              <li><a href="#">Syarat dan Ketentuan</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Paket Karimunjawa</h4>
+            <ul>
+              <li><a href="#">Paket Honeymoon</a></li>
+              <li><a href="#">Paket Group</a></li>
+              <li><a href="#">Paket Hotel Resort</a></li>
+              <li><a href="#">Paket Homestay</a></li>
+              <li><a href="#">Paket Backpacker</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>24 HOURS HOTLINE</h4>
+            <ul>
+              <li><i class="fas fa-phone-square-alt"></i> 0271-123456</li>
+              <li><i class="fab fa-whatsapp"></i> 0851234567</li>
+              <li>
+                <a href="#"><i class="fab fa-instagram"></i> @Progate_tour_travel</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <div class="videowrapper">
+              <iframe
+                frameborder="0"
+                scrolling="no"
+                marginheight="0"
+                marginwidth="0"
+                width="498.40000000000003"
+                height="280"
+                type="text/html"
+                src="https://www.youtube.com/embed/3kf0DigP1O4?autoplay=0&fs=1&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"
+                ><div>
+                  <small><a href="https://youtubeembedcode.com/pl/">youtubeembedcode pl</a></small>
+                </div>
+                <div>
+                  <small><a href="https://embedgooglemaps.com">Google maps embed</a></small>
+                </div>
+              </iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div class="credit">
+      <div class="copyright"><p>Copyright &copy; by Progate_tour_travel</p></div>
+    </div>
+        
+ <!-- end footer -->
 </body>
 </html>
