--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="header-left">
-                <h3 class="logo">Progate Tour & Travel</h3>
-                <ul>
-                    <a href="#">Home</a>
-                    <a href="#">Profil Kami</a>
-                    <a href="#">Paket Kami</a>
-                    <a href="#">Testimoni</a>
-                </ul>
-            </div>
-            <div class="header-right">
-                <form action="/search" class="flex-form"> 
-                    <input id="" name="" placeholder="Cari... 0812-3456-7890 Call WA" type="search">
-                    <a href="#">Search</a>
-                </form>
- 
-            </div>
+   <header>
+      <div class="container">
+        <div class="header-left">
+          <h3 class="logo">Progate Tour & Travel</h3>
+          <ul>
+            <a href="#">Home</a>
+            <a href="#">Profil Kami</a>
+            <a href="#">Paket Kami</a>
+            <a href="#">Testimoni</a>
+          </ul>
         </div>
+        <div class="header-right">
+          <form action="/search" class="flex-form">
+            <input id="" name="" placeholder="Cari... 0812-3456-7890 Call WA" type="search" />
+            <a href="#">Search</a>
+          </form>
+        </div>
+      </div>
     </header>
+    <section>
+      <div class="container">
+        <div class="main"></div>
+      </div>
+    </section>
     
     <!-- start wrapper 1 -->
     <div class="wrapper1-top">
