--- a/index.html
+++ b/index.html
@@ -141,9 +141,8 @@
         <br><br>
 
         <div id="wrapper3" align="center">
-            <h1>
-            <span style='color: #ff1a75;'>Travel</span> Lebih<span style='color: orange;'> Hemat</span> Bersama <span style='color: #00b300;'>kami</span></h1>
-            <p>Progate Tour & Travel berdiri sejak tahun 2015, salah satu perusahaan biro jasa travel terbaik di Indonesia. Yang saat ini berkembang secara pesat, hadir untuk membantu Anda merencanakan perjalanan yang nyaman dan aman.</p>
+            <h1><span style='color: #ff1a75;'>Travel</span> Lebih<span style='color: orange;'> Hemat</span> Bersama <span style='color: #00b300;'>kami</span></h1>
+            <br><p>Progate Tour & Travel berdiri sejak tahun 2015, salah satu perusahaan biro jasa travel terbaik di Indonesia. Yang saat ini berkembang secara pesat, hadir untuk membantu Anda merencanakan perjalanan yang nyaman dan aman.</p>
             <p>Customer Service kami siap membantu Anda dengan menyediakan informasi paket Tour / Wisata dengan harga kompetitif.</p>
             <a href="https://api.whatsapp.com/send?phone=6281994889229&text=Hi,%20Progate%20Tour%20	%26 %20Travel"><button class="button-hubungi-kami"><img src="http://xpdc.co.id/assets/images/wa.png" style="vertical-align: top;" width="16px"> Hubungi Kami</button></a>
         </div>
