--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
            </div>
          </div>
      
-         <div class="wrapper2-bot"></div>
-             <div class="container">
+         <div class="wrapper2-bot">
                  <div class="wrap2-bot">
                      <span class="tim">TIM</span>
                      <span class="progate">PROGATE</span>
@@ -75,7 +74,6 @@
                  <div class="text-home">
                      <p>Kami menyediakan Paket Wisata Progate Tour Travel Open Trip Murah Couple, Honeymoon, Group Company, Diving, Snorkeling, Info Hotel, Resort, Tiket Kapal, Pesawat ke Karimunjawa Islands dengan Harga Agen Terbaik</p>
                  </div>
-             </div>
         </div>
 
         <br><br>
